test/files/neg/t4584.scala
class A { val x = """\u2
