test/files/neg/t4584.check
t4584.scala:1: error: unclosed multi-line string literal
class A { val x = """\u2
                  ^
t4584.scala:1: error: illegal start of simple expression
class A { val x = """\u2
                        ^
2 errors
